--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
 .container {
     display: flex;
     height: 100%; /* Full height */
+    align-items: center;
 }
 
 .image-container {
@@ -29,7 +30,7 @@ body {
 .overlay {
     position: absolute;
     top: 10px; /* Position from the top */
-    left: 10px; /* Position from the left */
+    left: 30px; /* Position from the left */
     color: white; /* Text color */
     text-align: center; /* Align text to the left */
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
@@ -40,12 +41,21 @@ body {
 .logo {
     width: 100px; /* Adjust logo size as needed */
     margin-bottom: 5px; /* Space below logo */
+
 }
 
 .background-image {
     width: 100%;
-    height: 100%;
-    object-fit: cover; /* Ensure image covers the area */
+    height: 120vh;
+    object-fit: cover; 
+    padding: 5px 0 0 5px;
+    
+}
+
+@media (max-width:768px) {
+    .background-image{
+        padding:0 0 0 20px;
+    }
 }
 
 .form-container {
